feat: Completed first draft of playbook based in update3.sh

--- a/inventory/sample.ini
+++ b/inventory/sample.ini
@@ -9,9 +9,10 @@ application_source ansible_host=FIXME ansible_user=root
 application_destination ansible_host=FIXME ansible_user=root
 
 [playbook:vars]
-# Database names and users. Passwords are stored in a vault file
+# Database names and users and database destination host. Passwords are stored in a vault file
 database_source_name=FIXME
 database_source_username=FIXME
+database_destination_host=FIXME
 database_destination_name=FIXME
 database_destination_username=FIXME
 
@@ -28,3 +29,8 @@ data_folder_destination=FIXME
 application_folder_source=FIXME
 application_folder_destination=FIXME
 
+# Application admin username, password is stored in the vault file
+application_admin_username=FIXME
+
+# Run update tasks on the destination host
+update_tasks=[]
