feat: Incorporated passwords into inventory

--- a/inventory/sample.ini
+++ b/inventory/sample.ini
@@ -9,13 +9,14 @@ application_source ansible_host=FIXME ansible_user=root
 application_destination ansible_host=FIXME ansible_user=root
 
 [playbook:vars]
-# Database names and users and database destination host. Passwords are stored in a vault file
+# Database names and users and database destination host
 database_source_name=FIXME
 database_source_username=FIXME
+database_source_password=!vault secretFIXME
 database_destination_host=FIXME
 database_destination_name=FIXME
 database_destination_username=FIXME
-
+database_destination_password=!vault secretFIXME
 
 # Base URL of source and destination environment
 url_source=FIXME
@@ -29,8 +30,9 @@ data_folder_destination=FIXME
 application_folder_source=FIXME
 application_folder_destination=FIXME
 
-# Application admin username, password is stored in the vault file
+# Application admin username and password
 application_admin_username=FIXME
+application_admin_password=!vault secretFIXME
 
 # Run update tasks on the destination host
 update_tasks=[]
