--- a/playbook.yaml
+++ b/playbook.yaml
@@ -2,26 +2,31 @@
 
 - name: "Create temporary path"
   tasks:
-    - tempfile:
+    - name: "Create temporary path"
+      tempfile:
         state: "directory"
       register: "local_tempdir"
 
 - name: "Dump database"
   hosts: database_source
   tasks:
-    - tempfile:
+    - name: "Create temporary file"
+      tempfile:
       register: "tempfile"
-    - mysql_db:
+    - name: "Dump database"
+      mysql_db:
         name: "{{ database_source_name }}"
         login_user: "{{ database_source_username }}"
         login_password: "{{ database_source_password }}"
         state: "dump"
         target: "{{ tempfile }}.bz2"
-    - fetch:
+    - name: "Download dump"
+      fetch:
         src: "{{ tempfile }}.bz2"
         dest: "{{ local_tempdir }}"
         flat: "yes"
-    - file:
+    - name: "Cleanup"
+      file:
         path: "{{ tempfile }}.bz2"
         state: "absent"
 
@@ -41,123 +46,151 @@
 - name: "Restore dump"
   hosts: database_destination
   tasks:
-    - tempfile:
+    - name: "Create temporary directory"
+      tempfile:
         state: "directory"
       register: "remote_tempdir"
-    - copy:
+    - name: "Upload dump"
+      copy:
         src: "{{ local_tempdir }}/{{ tempfile }}"
         dest: "{{ remote_tempdir }}"
-    - mysql_db:
+    - name: "Import dump"
+      mysql_db:
         name: "{{ database_destination_name }}"
         login_user: "{{ database_destination_username }}"
         login_password: "{{ database_destination_password }}"
         state: "import"
         target: "{{ remote_tempdir }}/{{ tempfile }}.bz2"
-    - file:
+    - name: "Cleanup"
+      file:
         path: "{{ remote_tempdir }}"
         state: "absent"
 
 - name: "Clean up locally"
   tasks:
-    - file:
+    - name: "Remove database dump"
+      file:
         path: "{{ local_tempdir }}/{{ tempfile }}"
         state: "absent"
 
 - name: "Transfer application from source"
   hosts: application_source
   tasks:
-    - tempfile:
+    - name: "Create temporary file"
+      tempfile:
       register: "application_archive"
-    - archive:
+    - name: "Archive application folder"
+      archive:
         path: "{{ application_folder }}"
         dest: "{{ application_archive }}.tar.bz2"
         format: "bz2"
-    - fetch:
+    - name: "Download application folder"
+      fetch:
         src: "{{ application_archive }}.tar.bz2"
         dest: "{{ local_tempdir }}"
         flat: "yes"
-    - file:
+    - name: "Cleanup"
+      file:
         path: "{{ application_archive }}.tar.bz2"
         state: "absent"
 
 - name: "Transfer application to destination"
   hosts: application_destination
   tasks:
-    - tempfile:
+    - name: "Create temporary path"
+      tempfile:
       register: "remote_tempdir"
-    - copy:
+    - name: "Copy application archive"
+      copy:
         src: "{{ local_tempdir }}/{{ application_archive }}.tar.bz2"
         dest: "{{ remote_tempdir }}"
-    - file:
+    - name: "Remove old application folder"
+      file:
         path: "{{ application_folder_destination }}"
         state: "absent"
-    - unarchive:
+    - name: "Unarchive application archive"
+      unarchive:
         src: "{{ remote_tempdir }}/{{ application_archive }}.tar.bz2"
         dest: "{{ application_folder_destination }}"
 
 - name: "Clean up locally"
   tasks:
-    - file:
+    - name: "Remove application archive"
+      file:
         path: "{{ local_tempdir }}/{{ application_archive }}.tar.bz2"
         state: "absent"
 
 - name: "Fix application settings"
   hosts: application_destination
   tasks:
-    - lineinfile:
+    - name: "Add dbhost"
+      lineinfile:
         path: "{{ application_folder_destination }}/elgg-config/settings.php"
         line: "$CONFIG->dbhost = '{{ database_destination_host }}';"
-    - lineinfile:
+    - name: "Add dbname"
+      lineinfile:
         path: "{{ application_folder_destination }}/elgg-config/settings.php"
         line: "$CONFIG->dbname = '{{ database_destination_name }}';"
-    - lineinfile:
+    - name: "Add dbuser"
+      lineinfile:
         path: "{{ application_folder_destination }}/elgg-config/settings.php"
         line: "$CONFIG->dbuser = '{{ database_destination_username }}';"
-    - lineinfile:
+    - name: "Add dbpass"
+      lineinfile:
         path: "{{ application_folder_destination }}/elgg-config/settings.php"
         line: "$CONFIG->dbpass = '{{ database_destination_password }}';"
-    - lineinfile:
+    - name: "Add dataroot"
+      lineinfile:
         path: "{{ application_folder_destination }}/elgg-config/settings.php"
         line: "$CONFIG->dataroot = '{{ data_folder_destination }}';"
 
 - name: "Transfer data folder from source"
   hosts: application_source
   tasks:
-    - tempfile:
+    - name: "Create temporary file"
+      tempfile:
       register: "data_archive"
-    - archive:
+    - name: "Archive data folder"
+      archive:
         path: "{{ data_folder }}"
         dest: "{{ data_archive }}.tar.bz2"
         format: "bz2"
         exclude_path:
           - "system_cache"
           - "views_simplecache"
-    - fetch:
+    - name: "Download data archive"
+      fetch:
         src: "{{ data_archive }}.tar.bz2"
         dest: "{{ local_tempdir }}"
         flat: "yes"
-    - file:
+    - name: "Cleanup"
+      file:
         path: "{{ data_archive }}.tar.bz2"
         state: "absent"
 
 - name: "Transfer data folder to destination"
   hosts: application_destination
   tasks:
-    - tempfile:
+    - name: "Create temporary path"
+      tempfile:
       register: "remote_tempdir"
-    - copy:
+    - name: "Upload data archive"
+      copy:
         src: "{{ local_tempdir }}/{{ data_archive }}.tar.bz2"
         dest: "{{ remote_tempdir }}"
-    - file:
+    - name: "Remove old data folder"
+      file:
         path: "{{ data_folder_destination }}"
         state: "absent"
-    - unarchive:
+    - name: "Unarchive data archive"
+      unarchive:
         src: "{{ remote_tempdir }}/{{ data_archive }}.tar.bz2"
         dest: "{{ data_folder_destination }}"
 
 - name: "Clean up locally"
   tasks:
-    - file:
+    - name: "Remove data archive"
+      file:
         path: "{{ local_tempdir }}/{{ data_archive }}.tar.bz2"
         state: "absent"
 
@@ -192,8 +225,7 @@
     - name: "Include update tasks"
       include_tasks:
         file: "updates/{{ item }}.yaml"
-        loop: "{{ update_tasks }}"
-  when: "{{ update_tasks|length }} > 0"
+      loop: "{{ update_tasks }}"
 - name: "Run database updates"
   hosts: database_destination
   tasks:
@@ -202,8 +234,9 @@
         tempfile:
         register: "update_sql_tempfile"
       - name: "Upload script"
-        src: "updates_sql/{{ item }}.sql"
-        dest: "{{ update_sql_tempfile }}"
+        copy:
+          src: "updates_sql/{{ item }}.sql"
+          dest: "{{ update_sql_tempfile }}"
       - name: "Run script"
         mysql_db:
           state: "import"
