fix: Corrected vars handling

--- a/inventory/sample.yaml
+++ b/inventory/sample.yaml
@@ -2,7 +2,7 @@ playbook:
   hosts:
     # The master host running the playbook (required for copy/fetch tasks)
     ansible_master:
-      ansible_connection: local
+      ansible_connection: "local"
     # Database hosts
     database_source:
       ansible_host: "FIXME"
