feat: More tags

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -150,6 +150,7 @@
 - name: "Fix application settings"
   tags:
     - "application"
+    - "application_settings"
   hosts: application_destination
   tasks:
     - name: "Add dbhost"
