--- a/playbook.yaml
+++ b/playbook.yaml
@@ -26,7 +26,7 @@
     - name: "Download dump"
       fetch:
         src: "{{ tempfile }}"
-        dest: "{{ hostvars['ansible_master']['local_tempdir'] }}/database.sql"
+        dest: "{{ hostvars['ansible_master']['local_tempdir'].path }}/database.sql"
         flat: "yes"
     - name: "Cleanup"
       file:
