--- a/playbook.yaml
+++ b/playbook.yaml
@@ -25,7 +25,7 @@
         target: "{{ tempfile.path }}.sql"
     - name: "Download dump"
       fetch:
-        src: "{{ tempfile }}"
+        src: "{{ tempfile.path }}"
         dest: "{{ hostvars['ansible_master']['local_tempdir'].path }}/database.sql"
         flat: "yes"
     - name: "Cleanup"
