docs: Document sed usage

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -39,10 +39,11 @@
     - "uncheckable"
   hosts: ansible_master
   tasks:
+    # Uses sed command instead of replace because auf https://github.com/ansible/ansible/issues/64353
     - name: "Fix URL"
-      command: "sed -i -re 's#{{ url_source }}#{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql"
+      command: "sed -i -re 's#{{ url_source }}#{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
     - name: "Fix paths"
-      command: "sed -i -re 's#{{ data_folder_source }}#{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql"
+      command: "sed -i -re 's#{{ data_folder_source }}#{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
 
 - name: "Restore dump"
   tags:
